add function to update gameboard dispaly

--- a/src/play-game-style.scss
+++ b/src/play-game-style.scss
@@ -30,6 +30,15 @@
 #computer-gameboard {
     width: 45%;
     height: 80%;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    > div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: crosshair;
+    }
 }
 #turn-indicator {
     background-color: yellow;
