add game-loop for player turns and win checking

--- a/src/play-game-style.scss
+++ b/src/play-game-style.scss
@@ -39,6 +39,9 @@
         justify-content: center;
         cursor: crosshair;
     }
+    > div:hover{
+        background-color: green;
+    }
 }
 #turn-indicator {
     background-color: yellow;
