--- a/src/startup-style.scss
+++ b/src/startup-style.scss
@@ -4,7 +4,7 @@
 .game-setup {
     display: flex;
     flex-grow: 1;
-    padding: .3rem;
+    padding: 0.3rem;
     height: 100vh;
     column-gap: 1rem;
     * {
@@ -16,7 +16,7 @@
     height: 23%;
     transform: rotate(270deg);
 }
-.ship-placeholder{
+.ship-placeholder {
     background-color: yellow;
 }
 .ship-options {
@@ -29,7 +29,7 @@
     > div {
         outline: 1px solid yellow;
     }
-    .horizontal{
+    .horizontal {
         transform: rotate(360deg) !important;
     }
     #battleship {
@@ -77,11 +77,12 @@
         width: 90%;
         height: 75%;
         display: grid;
-        grid-template-columns: repeat(10,1fr);
-        grid-template-rows: repeat(10,1fr);
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(10, 1fr);
     }
     .rotate-ship,
-    .start-game,.reset-ships {
+    .start-game,
+    .reset-ships {
         width: 25%;
         height: 6%;
     }
