--- a/src/play-game-style.scss
+++ b/src/play-game-style.scss
@@ -3,48 +3,80 @@
 // id="player-gameboard
 // id="computer-gameboard
 // id="turn-indicator"
+@font-face {
+    font-family: myFont;
+    src: url("./assets/commando.ttf");
+}
 * {
     box-sizing: border-box;
+    font-family: myFont;
+    letter-spacing: 1px;
 }
 .game-start {
-    display: flex;
-    flex-grow: 1;
-    padding: 0.3rem;
     height: 100vh;
-    flex-wrap: wrap;
+    display: grid;
     justify-content: center;
-    column-gap: 5rem;
-    * {
-        outline: 1px solid black;
-    }
+    align-items: center;
+    justify-items: center;
+    grid-template-columns: 40% 15% 40%;
+    grid-template-rows: 10% 85%;
+    row-gap: 1rem;
 }
+#player-name{
+    grid-column: 1/2;
+}
+#computer-name{
+    grid-column: 3/4;
+}
+#turn-indicator{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+#player-gameboard{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+#computer-gameboard{
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
 #player-name,
 #computer-name {
-    width: 45%;
-    height: 8%;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 2px solid #081e2b;
+    background-color: #d8ecf8;
+    font-size: 2.5rem;
 }
 #player-gameboard,
 #computer-gameboard {
-    width: 45%;
-    height: 80%;
+    background-color: #d8ecf8;
+    border: 2px solid #081e2b;
+    height: 100%;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
     > div {
+        border: 1px solid #081e2b;
         display: flex;
         align-items: center;
         justify-content: center;
         cursor: crosshair;
     }
-    > div:hover{
+    > div:hover {
         background-color: green;
     }
 }
 #turn-indicator {
-    background-color: yellow;
+    font-size: 2.3rem;
+    background-color: #eef6fc;
+    border: 2px solid #081e2b;
+    border-radius: 5px;
     width: 90%;
     height: 8%;
     display: flex;
