--- a/src/play-game-style.scss
+++ b/src/play-game-style.scss
@@ -12,6 +12,38 @@
     font-family: myFont;
     letter-spacing: 1px;
 }
+@mixin vertical-ship() {
+    transform: rotate(-90deg);
+}
+@mixin absolutePosition-ship($top: 0,$bottom :0 ,$left:0,$right:0){
+    top: $top !important;
+    bottom: $bottom !important;
+    left: $left !important;
+    right: $right !important;
+}
+.vertical-ship {
+    @include vertical-ship;
+    &.battleship {
+        @include absolutePosition-ship(90px, 0px, -115px, 0px);
+        width: 265px !important;
+    }
+    &.cruiser {
+        @include absolutePosition-ship(73px, 0px, -70px, 0px);
+        width: 200px !important;
+    }
+    &.submarine {
+        @include absolutePosition-ship(80px, 0px, -70px, 0px);
+        width: 190px !important;
+    }
+    &.carrier {
+        @include absolutePosition-ship(120px, 0px, -145px, 0px);
+        width: 330px !important;
+    }
+    &.destroyer {
+        @include absolutePosition-ship(35px, 0px, -30px, 0px);
+        width: 125px !important;
+    }
+}
 .placed-ship {
     user-select: none;
     pointer-events: none;
@@ -43,21 +75,21 @@
     grid-template-rows: 10% 85%;
     row-gap: 1rem;
 }
-#player-name{
+#player-name {
     grid-column: 1/2;
 }
-#computer-name{
+#computer-name {
     grid-column: 3/4;
 }
-#turn-indicator{
+#turn-indicator {
     grid-column: 2/3;
     grid-row: 2/3;
 }
-#player-gameboard{
+#player-gameboard {
     grid-column: 1/2;
     grid-row: 2/3;
 }
-#computer-gameboard{
+#computer-gameboard {
     grid-column: 3/4;
     grid-row: 2/3;
 }
