--- a/src/play-game-style.scss
+++ b/src/play-game-style.scss
@@ -107,6 +107,8 @@
 }
 #player-gameboard,
 #computer-gameboard {
+
+    position: relative;
     background-color: #d8ecf8;
     border: 2px solid #081e2b;
     height: 100%;
@@ -114,15 +116,30 @@
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
-    > div {
+    > .placement-cell {
         border: 1px solid #081e2b;
         display: flex;
         align-items: center;
         justify-content: center;
         cursor: crosshair;
     }
-    > div:hover {
-        background-color: green;
+    > .placement-cell:hover {
+        background-color: rgb(8, 30, 43,0.3)
+    }
+    > .not-allowed{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: blue;
+        opacity: 0;
+        display: block;
+        cursor: not-allowed;
+        z-index: 999;
+        top: 0px;
+        left: 0px;
+        &.hidden{
+            display: none;
+        }
     }
 }
 #turn-indicator {
