--- a/src/play-game-style.scss
+++ b/src/play-game-style.scss
@@ -15,11 +15,19 @@
 @mixin vertical-ship() {
     transform: rotate(-90deg);
 }
-@mixin absolutePosition-ship($top: 0,$bottom :0 ,$left:0,$right:0){
+@mixin absolutePosition-ship($top: 0, $bottom: 0, $left: 0, $right: 0) {
     top: $top !important;
     bottom: $bottom !important;
     left: $left !important;
     right: $right !important;
+}
+.hit,
+.miss {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
 }
 .vertical-ship {
     @include vertical-ship;
@@ -107,7 +115,6 @@
 }
 #player-gameboard,
 #computer-gameboard {
-
     position: relative;
     background-color: #d8ecf8;
     border: 2px solid #081e2b;
@@ -124,9 +131,9 @@
         cursor: crosshair;
     }
     > .placement-cell:hover {
-        background-color: rgb(8, 30, 43,0.3)
+        background-color: rgb(8, 30, 43, 0.3);
     }
-    > .not-allowed{
+    > .not-allowed {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -137,7 +144,7 @@
         z-index: 999;
         top: 0px;
         left: 0px;
-        &.hidden{
+        &.hidden {
             display: none;
         }
     }
